--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="style.css">
   <title>AJ Blog Website</title>
   <style>
     body {
@@ -14,7 +15,7 @@
     }
     header {
       background: #222;
-      color: #fff;
+      color: oldlace;
       padding: 20px;
       text-align: center;
     }
@@ -22,7 +23,7 @@
       padding: 40px;
       max-width: 800px;
       margin: auto;
-      background: lightgrey;
+      background: black;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h2 {
@@ -59,10 +60,10 @@
   <style>
     .container {
       max-width: 800px;
-      margin: 50px auto;
-      padding: 20px;
-      background-color: #f0f0f0;
-      border-radius: 10px;
+      margin: 20px;
+      padding: 10px;
+      background-color: #000;
+      border-radius: 40px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       font-family: Arial, sans-serif;
     }
@@ -70,7 +71,7 @@
 </head>
 <body>
   <div class="container">
-<h2><p style="text-align: center;"> Personal Info</p></h2>
+<u><h2><p style="text-align: center;"> Personal Info</p></h2></u>
 <p <b>Name:</b> Angelina Joy Pena Laguros</p>
 <p <b>Age:</b> 19</p>
 <p <b>Birthday:</b> 03/27/2006</p>
@@ -81,7 +82,7 @@
 </head>
 <body>
   <div class="container">
-<h2><p style="text-align: center;"> Achievement</p></h2>
+<u><h2><p style="text-align: center;"> Achievement</p></h2></u>
 <b><p style="text-align: center;"> Graduated with honors in Kaunlaran High School</p></b>
 <b><p style="text-align: center;"> Completion of work immersion in Eballe Graphics</p></b>
 <b><p style="text-align: center;"> Computer System Servicing NC II holder</p></b>
@@ -101,19 +102,26 @@
 </head>
 <body>
   <div class="container">
-<h2><p style="text-align: center;"> Expected the unexpected</p></h2>
+<u><h2><p style="text-align: center;"> Expected the unexpected</p></h2></u>
 <p><em>The word that usually describes me is "expected the unexpected." Prior to this, I didn't even believe I could complete high school, but I also believed that I had graduated with accomplishment. Even though I've accomplished these things, it feels great since I've accomplished something. This is the evidence that I have accumulated over the years.
 </em></p>
-<br>
-<br>
-  </style>
-</head>
-<body>
-<h2><p style="text-align: center;">Why BSIT course</p></h2>
-<p><em>When I was in grade 6, we had a class that was all about PPT or power point, which was more focused on editing, and I found myself happy even when it was difficult to edit. When we went to school one day, we were offered a scholarship, but the award required us to study at a school that focused more on technology, so I tried everything. I passed, what prevent me to go for it is the school that the scholarship offer is far away from my home,so start then i knew that im into technology.</em></p> 
+</div>
+</body>
+</html>
 <br>
   </style>
 </head>
 <body>
-<h2><p style="text-align: center;">College life</p></h2>
-<p><em>Still in college, but in my second year..It was as if I thought I couldn't go to college.. Before I came to college, I was thinking of working first , but my cousin chose me if I wanted to study. Of course, I was a risk taker, and I risked, so here I am now having a difficult time at school and work, yes, I have work and studying at the same time  and hopefully my sacrifices will pay off someday.</em></p>
+  <div class="container";>
+<u><h2><p style="text-align: center;">Why BSIT course</p></h2></u>
+<p><em>When I was in grade 6, we had a class that was all about PPT or power point, which was more focused on editing, and I found myself happy even when it was difficult to edit. When we went to school one day, we were offered a scholarship, but the award required us to study at a school that focused more on technology, so I tried everything. I passed, what prevent me to go for it is the school that the scholarship offer is far away from my home,so start then i knew that im into technology.</em></p>
+</div>
+</body>
+</html> 
+<br>
+  </style>
+</head>
+<body>
+  <div class="container";>
+<u><h2><p style="text-align: center;">College life</p></h2>
+<p></u><em>Still in college, but in my second year..It was as if I thought I couldn't go to college.. Before I came to college, I was thinking of working first , but my cousin chose me if I wanted to study. Of course, I was a risk taker, and I risked, so here I am now having a difficult time at school and work, yes, I have work and studying at the same time  and hopefully my sacrifices will pay off someday.</em></p>
